# fmri_utils

./: README.md  decoding.py  metrics.py  pyproject.toml  requirements.txt  second_level_analysis.py  transformations.py
src/fmri_utils/: decoding.py  metrics.py  searchlight_metrics.py  second_level_analysis.py  transformations.py
src/fmri_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
