[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmri-utils"
version = "0.2.0"
description = "Reusable fMRI utilities (second-level analysis, fMRIPrep-based transforms, decoding helpers)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "nibabel",
  "nilearn",
  "matplotlib>=3.8.0",
  "seaborn",
  "scikit-learn",
  "tqdm",
  "fire",
]

[project.scripts]
fmri-utils = "fmri_utils.second_level_analysis:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


